# qdl-utils-qdots

./: README.md  pyproject.toml
docs/: ExperimentsDoc.md  old_qt3utils_readme.md  qdlmove-sop.md  qdlple-sop.md  qdlscan-sop.md  qdlscope-sop.md
examples/: confocal-scan.ipynb  default_cwodmr.ipynb  default_podmr.ipynb  default_rabi.ipynb  default_ramsey.ipynb  pulse_blaster_testing.ipynb  testing_MW_switch.ipynb
examples/qdlple/: example_output.hdf5  ple_scan_loader.ipynb
examples/qdlscan/: confocal_scan_loader.ipynb  image.hdf5  x_scan.hdf5  y_scan.hdf5  z_scan.hdf5
src/qdlutils/amplifiers/: minicircuits.py
src/qdlutils/applications/controllers/: andor_spectrometer.py  nidaq_edge_counter.yaml  nidaq_wm_ple.yaml  princeton_spectrometer.yaml  random_data_generator.yaml  random_spectrometer.yaml
src/qdlutils/applications/qdlhome/: main.py
src/qdlutils/applications/qdlmove/: application_controller.py  application_gui.py  main.py
src/qdlutils/applications/qdlple/: application_controller.py  application_gui.py  main.py
src/qdlutils/applications/qdlscan/: application_controller.py  application_gui.py  main.py  test.ipynb
src/qdlutils/applications/qdlscope/: application_controller.py  application_gui.py  main.py  read_qdlscope.py
src/qdlutils/applications/qt3pb/: main.py
src/qdlutils/applications/qt3scan/: controller.py  main.py
src/qdlutils/applications/qt3scope/: main.py
src/qdlutils/datagenerators/: plescanner.py
src/qdlutils/datagenerators/spectrometers/: princeton.py
src/qdlutils/experiments/: cwodmr.py  podmr.py  rabi.py  ramsey.py  t1coherence.py
src/qdlutils/hardware/nidaq/: daqsamplers.py  nidaqedgecounter.py  nidaqpiezocontroller.py
src/qdlutils/hardware/pulsers/: pulseblaster.py  qcsapphire.py
src/qdlutils/hardware/simulators/: random_data_generator.py
src/qdlutils/hardware/spectrometers/: andor.py  andor_spectrometer.py  princeton_spectrometer.py
src/qdlutils/pulsers/: pulseblaster.py
src/qt3utils/applications/controllers/: nidaq_rate_counter.yaml  nidaqedgecounter.py
src/qt3utils/applications/qdlmove/: application_controller.py  application_gui.py  main.py  newportmicrometer.py  nidaqjanispiezo.py  nidaqpiezo.py
src/qt3utils/datagenerators/: daqsamplers.py  piezoscanner.py  plescanner.py
src/qt3utils/nidaq/: customcontrollers.py
(+24 files in other folders)
