[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qdlutils"
version = "v1.0.0prerelease"

description = "A package for performing experiments in the quantum defect lab at UW."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["qdl", "confocal scan", "nidaqmx", "piezo", "stage", "control", "spin control"]

authors = [
    {name = "G. Adam Cox", email = "gadamc@gmail.com" },
    {name = "Nicholas S. Yama", email = "nsyama@uw.edu" },
]

maintainers = [
    {name = "Nicholas S. Yama", email = "nsyama@uw.edu" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",

    # Indicate who your project is intended for
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",

    # Pick your license as you wish
    "License :: OSI Approved :: BSD License",

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by "pip install". See instead "python_requires" below.
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "nidaqmx>=0.6.3",
    "numpy>=1.21.2",
    "matplotlib>=3.4.3",
    "scipy>=1.7.1",
    "h5py>=3.3.0",
    "qcsapphire>=1.0.1",
    "qt3rfsynthcontrol>=1.0.1",
    "nipiezojenapy>=1.0.4",
    "pulseblaster>=1.0.1",
    "PyYAML>=6.0.1",
    "pythonnet>=3.0.3"
]

[project.urls]
"Homepage" = "https://github.com/UW-Quantum-Defect-Lab/qdl-utils"
"Source" = "https://github.com/UW-Quantum-Defect-Lab/qdl-utils"
"Bug Tracker" = "https://github.com/UW-Quantum-Defect-Lab/qdl-utils/issues"
"Changelog" = "https://github.com/qt3uw/qt3utils/releases"

[project.scripts]
qdlmove = "qdlutils.applications.qdlmove.main:main"
qdlple = "qdlutils.applications.qdlple.main:main"
qdlscan = "qdlutils.applications.qdlscan.main:main"

[tool.setuptools.package-data]
"qdlutils.applications.controllers" = ["*.yaml"]
